# osc-gitea-plugin

./: pyproject.toml
.github/workflows/: ci.yml
features/: clone.feature  environment.py  fork.feature
features/steps/: common.py
osc_gitea_plugin/: clone_command.py  common.py  fork_command.py  tea_config.py
